src/test/deca/context/invalid/Objet/UnaryMinus-Field-BadType.deca
// Description:
//      Doing operations on  public fields in main
//
// Results:
//      (RULE 3.37) Illegal operand type.
//
// History:
//      created on 19/1/2022

class A {
    float x;
}

class B {
    int x;
}

{
    A a = new A();
    B b = new B();
    int y = (int) (-a * b.x);
}